--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "start-dev": "nodemon -e js, json, hbs ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
+    "connect-mongo": "^3.0.0",
     "cookie-parser": "^1.4.4",
     "debug": "~2.6.9",
     "express": "^4.16.4",
+    "express-session": "^1.16.2",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "mongoose": "^5.6.6",
