--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "connect-mongo": "^3.0.0",
     "cookie-parser": "^1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-session": "^1.16.2",
     "hbs": "~4.0.4",
@@ -25,5 +26,9 @@
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0"
+  },
+  "engines": {
+    "node": "v12.6.0",
+    "npm": "6.10.1"
   }
 }
