--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "cloudinary": "^1.14.0",
+    "cloudinary-react": "^1.1.4",
     "connect-mongo": "^3.0.0",
     "cookie-parser": "^1.4.4",
     "debug": "~2.6.9",
@@ -17,7 +19,9 @@
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "mongoose": "^5.6.6",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^2.2.1"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
